@@ -43,7 +43,7 @@ Instructions about adding support for a new proof assistant is contained in
 the Proof General Adapting manual.
 
 Prooftree is distributed under GPL version 3.
-Copyright (C) 2011, 2012 Hendrik Tews
+Copyright (C) 2011 - 2013 Hendrik Tews
 
 
 ============================================================================
