@@ -1,3 +1,7 @@
+2013-03-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* copyright 2013
+
 2013-03-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* change required Proof General version to 4.3pre130327
